# vcpkg-cmake-example

./: CMakeLists.txt  Makefile  README.md  main.cpp  vcpkg.json
